array.island.Island.scala.error
Erreur de compilation :
Island:5: error: '(' expected but identifier found.
     if num(i)<num(i+1)
        ^Island:6: error: illegal start of simple expression
  }
  ^